# yutube_downloader

./: .gitignore  LICENSE  README.ja.md  README.md  pyproject.toml
src/yutube_downloader/: __init__.py  __main__.py  cli.py  downloader.py
